# humanitarian-mcp

./: .dockerignore  .gitignore  ALL_TOOLS_WORKING.md  CLAUDE_WEB_AND_OPENAI.md  CONTRIBUTING.md  COPY_PASTE_EXAMPLES.md  DEPLOYMENT.md  DEPLOY_AS_UNIVERSAL_MCP.md  Dockerfile  EXAMPLES.md  FINAL_SUMMARY.txt  GOOGLE_CLOUD_RUN_SETUP.md  HOW_TO_USE_CHATGPT.md  INDEX.md  INSTALL_MCP_CLAUDE_DESKTOP.bat  INTEGRATION_EXAMPLES.md  LICENSE  OPENAI_COMPLETE_SCHEMA.json  OPENAI_INTEGRATION.md  OPENAI_LEVERAGE_GUIDE.md  OPENAI_SCHEMA_FIXED.json  OPENAI_SETUP_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_OPTIONS_SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_OPENAI.md  README.md  UNIVERSAL_DEPLOYMENT_GUIDE.md  UNIVERSAL_MCP_INDEX.md  WHAT_YOU_HAVE.txt  YOUR_OPENAI_CONFIG.md  docker-compose.yml  http_server.py  humanitarian_negotiation_mcp.py  pyproject.toml  requirements_mcp.txt  setup.py  setup_package.py
.claude/: settings.local.json
